# APPS

./: .gitmodules  BOM Testapparaat.xlsx  LICENSE  README.md
APPS_MAIN/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
APPS_MAIN/components/gui/: CMakeLists.txt  gui_helper.c  gui_helper.h
APPS_MAIN/components/gui/ui_swap/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_font_Font1.c  ui_font_Font1_30.c  ui_font_Font1_40.c  ui_font_Roboto_bold_24.c  ui_helpers.c  ui_helpers.h  ui_img_1691730083.c
APPS_MAIN/components/gui/ui_swap/screens/: light_screen.c  light_screen.h  tens_screen.c  tens_screen.h  vibration_screen.c  vibration_screen.h
APPS_MAIN/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c
APPS_MAIN/ui/: CMakeLists.txt  ui_font_Roboto_bold_40.c  ui_img_1691730083.c
APPS_MAIN/ui_swap/: ui.c  ui.h  ui_font_Roboto_40.c
Example_unit_test/: CMakeLists.txt
Example_unit_test/test/: sdkconfig
Shift_reg/: CMakeLists.txt  sdkconfig
Shift_reg/main/: CMakeLists.txt  blink_example_main.c  main.cpp
Testapparaat/: Testapparaat.kicad_pro  Testapparaat.kicad_sch  testapparaat_symbols.bak  testapparaat_symbols.kicad_sym
UML/: Use_case.puml  activity.puml
docs/: install_vscode.md
hardware/Testapparaat/: #auto_saved_files#  .~lock.Testapparaat.csv#  GPIO_OUTPUTS.kicad_sch  MCU.kicad_sch  Power_Supply.kicad_sch  Testapparaat.csv  Testapparaat.kicad_pcb  Testapparaat.kicad_prl  Testapparaat.kicad_pro  Testapparaat.kicad_sch  Testapparaat.xml  _autosave-io_port.kicad_sch  button_inputs.kicad_sch  display.kicad_sch  (+6 more)
pwm/: CMakeLists.txt
(+138 files in other folders)
